# NomNomNavigator

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
src/: actors.rs  db_models.rs  db_utils.rs  main.rs  schema.rs  test.rs  types.rs
src/services/: db_models.rs  db_utils.rs  insertable.rs  messages.rs  mod.rs  pg_handling.rs  redis_handling.rs
