[package]
name = "customer-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.4"
dotenv = "0.15.0"

actix = "0.13.1"
actix-web = "4.4.0"

chrono = { version = "^0.4.31", features = ["serde"] }
diesel = { version = "2.1.4", features = ["postgres", "chrono", "r2d2"] }

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"